<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="beehiveandroid.bg.BeehiveAndroidMainActivity$PlaceholderFragment" >

    <RelativeLayout 
        android:id="@+id/formfields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccc">
        
        <RelativeLayout 
            android:id="@+id/heading"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@android:color/transparent">
        	
	        <TextView
	            android:id="@+id/hello_world_label"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/hello_world"
	        	style="@style/HeadingTitle"
	        	android:layout_below="@+id/beehive_label" />
	        
	        <TextView 
	            android:id="@+id/beehive_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/beehive_android"
	            style="@style/HeadingTitle"/>
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/wrapper_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading">
            
            <TextView
	            android:id="@+id/label_name"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/name"
	        	android:layout_centerVertical="true"
	        	android:layout_alignParentRight="true"/>
            
            <EditText 
                android:id="@+id/name"
                android:layout_width="wrap_content"
	        	android:layout_height="60dp"
	        	android:hint="@string/placeholder_name"
	        	android:layout_alignParentLeft="true"/>
        </RelativeLayout>
        
        <LinearLayout 
            android:id="@+id/percentdemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/wrapper_name">
            
            <Button
	            android:id="@+id/button_one"
	            android:background="#ff0000"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:text="@string/one"/>
            
            <Button
	            android:id="@+id/button_two"
	            android:background="#00ff00"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/two" />
            
            <Button
	            android:id="@+id/button_five"
	            android:background="#0000ff"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/five" />
            
        </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent" >

        <Button
            android:id="@+id/formCancel"
            style="@style/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel"
            android:drawableBottom="@drawable/ic_launcher"  />

        <Button
            android:id="@+id/formSubmit"
            style="@style/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/ok"
            android:drawableTop="@drawable/ic_launcher"  />
    </RelativeLayout>

</RelativeLayout>
